--- a/Analiza_danych_odkamieniania_gruntów_rolnych.ipynb
+++ b/Analiza_danych_odkamieniania_gruntów_rolnych.ipynb
@@ -53,7 +53,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Instalacja pakietów + załadowanie"
+        "{Pierwsze 2/3 linijki kodu srodowisko python, instalacja pip install nbconvert -> !jupyter nbconvert --to html /sciezka/do/pliku}Instalacja pakietów + załadowanie"
       ],
       "metadata": {
         "id": "HnChKVSFTacM"
